--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "odin-todolist",
   "version": "1.0.0",
   "description": "The Odin Project To Do List App",
+  "main":"index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
